= RSpec Changelog

== 0.9 (Dev)

* Eliminated sugar
* Behaviours/Examples (rather than Contexts/Specifications)

== Version 0.8.3

This release introduces #describe and #it as aliases for #context and #specify. This
allows you to express specs like this:

  describe SomeClass do
    it "should do something" do
    end
  end

The command line features two new options: --reverse and --loadby. They give you more control
over the order in which specs are run. This can be used to verify that your specs are
independent (by running in opposite order with --reverse). It can also be used to cut 
down feedback time by running the most recently modified specs first (--loadby mtime --reverse).

* Moved all of the Spec::Rails specs down to the plugins directory - now you can run the specs after you install.
* Updated RSpec.tmbundle to the 0.8 syntax and replaced context/specify with describe/it.
* Applied [#9232] ActionController::Base#render is sometimes protected (patch from Dan Manges)
* Added --reverse option, allowing contexts/specs to be run in reverse order. 
* Added --loadby option, allowing better control over load order for spec files. mtime and file.txt supported.
* Implemented [#8696] --order option (see --reverse and --loadby)
* Added describe/it as aliases for context/specify - suggestion from Dan North.
* Applied [#7637] [PATCH] add skip-migration option to rspec_resource generator
* Added [#9167] string.should have_tag
* Changed script/rails_spec_server to script/spec_server and added script/spec (w/ path to vendor/plugins/rspec)
* Fixed [#8897] Error when mixing controller spec with/without integrated views and using template system other than rhtml
* Updated sample app specs to 0.8 syntax
* Updated generated specs to 0.8 syntax
* Applied [#8994] trunk: generated names for be_ specs (Multiple patches from Yurii Rashkovskii)

== Version 0.8.2
