@@ -11,7 +11,7 @@ module Spec
       class ModelContext < Spec::Rails::Runner::Context
         def before_context_eval # :nodoc:
           inherit Spec::Rails::Runner::ModelEvalContext
-          @context_eval_module.init_global_fixtures
+          init_global_fixtures
         end
       end
     end
